--- a/litrevu/UserAccounts/templates/UserAccounts/auth.html
+++ b/litrevu/UserAccounts/templates/UserAccounts/auth.html
@@ -13,7 +13,7 @@
 
         <!-- Section Connexion -->
         <div class="form-contener">
-            <img src="{% static 'UserAccounts/images/user5.png' %}" alt="utilisateur">
+            <img src="{% static 'UserAccounts/images/user5.png' %}" alt="Logo utilisateur">
             <h2>Connectez-vous</h2>
 
             <form class="form" action="" method="post" novalidate>
