--- a/litrevu/UserAccounts/templates/UserAccounts/sign-up.html
+++ b/litrevu/UserAccounts/templates/UserAccounts/sign-up.html
@@ -7,7 +7,7 @@
     <div class="useraccounts-contener">
 
         <div class="form-contener">
-            <img src="{% static 'UserAccounts/images/pen.png' %}" alt="stylo">
+            <img src="{% static 'UserAccounts/images/pen.png' %}" alt="Stylo">
             <h2>Inscription</h2>
             <form class="form" action="" method="post" novalidate>
                 {% csrf_token %}
