--- a/litrevu/UserProfile/templates/UserProfile/success.html
+++ b/litrevu/UserProfile/templates/UserProfile/success.html
@@ -6,31 +6,8 @@
         <div class="form-contener width90">
             <img src="{% static 'UserProfile/images/check.png' %}" alt="Validation">
             <h1>Opération réalisée avec succès !</h1>
-            <p>Vous allez être redirigé dans <span id="userprofile-counter">6</span> secondes...</p>
+
+            <a class="button" href="{% url 'flux' %}">Retour au flux</a>
         </div>
     </div>
-
-    <script>         
-        var count = 6;
-        var countElement = document.getElementById("userprofile-counter");
-
-        function updateCounter() {
-            count--;
-
-            if (count >= 0) {
-                countElement.textContent = count;
-            }
-
-            /* window.location.href contient l'url de la page actuelle.
-            En modifiant ce paramètre, le navigateur redirige l'utilisateur vers la cible */
-            if (count <= 0) {
-                window.location.href = "{% url 'flux' %}";
-            /* La fonction est exécutée toutes les secondes */
-            } else {
-                setTimeout(updateCounter, 1000);
-            }
-        }
-
-        updateCounter();
-    </script>
 {% endblock %}
